crates/escalier_parser/src/snapshots/escalier_parser__tests__operations-3.snap
---
source: crates/escalier_parser/src/lib.rs
expression: "parse(\"(a + b) * c;\")"
---
Ok(
    Program {
        body: [
            Statement {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 12,
                    },
                },
                span: 0..12,
                kind: ExprStmt(
                    Expr {
                        loc: SourceLocation {
                            start: Position {
                                line: 0,
                                column: 0,
                            },
                            end: Position {
                                line: 0,
                                column: 11,
                            },
                        },
                        span: 0..11,
                        kind: BinaryExpr(
                            BinaryExpr {
                                op: Mul,
                                left: Expr {
                                    loc: SourceLocation {
                                        start: Position {
                                            line: 0,
                                            column: 1,
                                        },
                                        end: Position {
                                            line: 0,
                                            column: 6,
                                        },
                                    },
                                    span: 1..6,
                                    kind: BinaryExpr(
                                        BinaryExpr {
                                            op: Add,
                                            left: Expr {
                                                loc: SourceLocation {
                                                    start: Position {
                                                        line: 0,
                                                        column: 1,
                                                    },
                                                    end: Position {
                                                        line: 0,
                                                        column: 2,
                                                    },
                                                },
                                                span: 1..2,
                                                kind: Ident(
                                                    Ident {
                                                        loc: SourceLocation {
                                                            start: Position {
                                                                line: 0,
                                                                column: 1,
                                                            },
                                                            end: Position {
                                                                line: 0,
                                                                column: 2,
                                                            },
                                                        },
                                                        span: 1..2,
                                                        name: "a",
                                                    },
                                                ),
                                                inferred_type: None,
                                            },
                                            right: Expr {
                                                loc: SourceLocation {
                                                    start: Position {
                                                        line: 0,
                                                        column: 5,
                                                    },
                                                    end: Position {
                                                        line: 0,
                                                        column: 6,
                                                    },
                                                },
                                                span: 5..6,
                                                kind: Ident(
                                                    Ident {
                                                        loc: SourceLocation {
                                                            start: Position {
                                                                line: 0,
                                                                column: 5,
                                                            },
                                                            end: Position {
                                                                line: 0,
                                                                column: 6,
                                                            },
                                                        },
                                                        span: 5..6,
                                                        name: "b",
                                                    },
                                                ),
                                                inferred_type: None,
                                            },
                                        },
                                    ),
                                    inferred_type: None,
                                },
                                right: Expr {
                                    loc: SourceLocation {
                                        start: Position {
                                            line: 0,
                                            column: 10,
                                        },
                                        end: Position {
                                            line: 0,
                                            column: 11,
                                        },
                                    },
                                    span: 10..11,
                                    kind: Ident(
                                        Ident {
                                            loc: SourceLocation {
                                                start: Position {
                                                    line: 0,
                                                    column: 10,
                                                },
                                                end: Position {
                                                    line: 0,
                                                    column: 11,
                                                },
                                            },
                                            span: 10..11,
                                            name: "c",
                                        },
                                    ),
                                    inferred_type: None,
                                },
                            },
                        ),
                        inferred_type: None,
                    },
                ),
            },
        ],
    },
)
